    projects remain.
  + Add the =(:log :level)= config option for controlling log verbosity.
  + Add =--no-resolve= option to =bundle install= to prevent re-resolving
    requirements when you know the lock file is up to date.
  + Client largely rewritten to launch a CLPM process and use a REPL to
    communicate instead of translating everything to CLI invocations.
  + Client's INSTALL and UPDATE functions made much simpler and more
    featureful.
  + Client's dribble features improved greatly.
  + =source-registry= CLI added.
  + =output-translations= CLI added.
  + =exec= CLI added.
  + =activate-context= function added to client to allow changing source registry
    and output translations of the current image.
  + Add =bundle init= CLI and =bundle-init= in client to easily create a new
    clpmfile.

* v0.2.1 - 2020-04-05

  + Rebind =*debugger-hook*= so that CLPM never drops into debugger.
  + Wildcard config options (such as for HTTP headers) can now be discovered
    purely from environment variables.

* v0.2.0 - 2020-04-03

  + Major rewrite of metadata storage. All source data is now stored in flat
    files that are read on demand.
  + Thread support is no longer mandatory.
  + Config and clpmfile{,.lock} formats have changed.

* v0.0.8 - 2019-04-05
  Bug fix, bundle install now correctly fetches git repos when a commit is missing
* v0.0.7 - 2019-01-28
  Bug fixes, add ability to statically link against libssl, improved helper scripts
* v0.0.6 - 2019-01-09
  Many documentation improvements.

  Switch to using tar and curl executables by default.
* v0.0.5 - 2018-12-10
  Allow specifying a port for http.
* v0.0.4 - 2018-12-10
  Allow http for a gitlab method.
* v0.0.3 - 2018-12-02
  Get git auth info from environment variables for bundle operations even if the
  local bundle config file is missing.
* v0.0.2 - 2018-12-02
  Bug fixes and easing some requirements on release->.
* v0.0.1 - 2018-10-13
  Initial release.