@@ -37,29 +37,42 @@
 (defun quicklisp-alternative-rc ()
   #?";;; Use CLPM as a quicklisp alternative (missing systems are silently installed
 ;;; on demand and not extra steps need to be taken to turn it on).
+;;;
+;;; Generated by CLPM ${(clpm:clpm-version)}
 
 (require \"asdf\")
 #-clpm-client
-(let ((client-asd-pathname #p\"${(clpm:client-asd-pathname)}\"))
-  (when (probe-file client-asd-pathname)
-    (asdf:load-asd client-asd-pathname)
-    (asdf:load-system \"clpm-client\")
-    (setf (symbol-value (uiop:find-symbol* :*asdf-system-not-found-behavior* :clpm-client)) :install)
-    (setf (symbol-value (uiop:find-symbol* :*context-diff-approval-method* :clpm-client)) t)
-    (if (uiop:symbol-call :clpm-client :active-context)
-        (uiop:symbol-call :clpm-client :activate-asdf-integration)
-        (uiop:symbol-call :clpm-client :activate-context \"default\" :activate-asdf-integration t))))")
+(when (asdf:find-system \"clpm-client\" nil)
+  ;; Load the CLPM client if we can find it.
+  (asdf:load-system \"clpm-client\")
+  (flet ((maybe-set-symbol-value (sym value)
+           (uiop:if-let ((sym (uiop:find-symbol* sym :clpm-client nil)))
+             (setf (symbol-value sym) value))))
+    ;; Do not prompt before attempting to install a missing system.
+    (maybe-set-symbol-value '#:*asdf-system-not-found-behavior* :install)
+    ;; Accept any diffs without prompting.
+    (maybe-set-symbol-value '#:*context-diff-approval-method* t))
+  (if (uiop:symbol-call :clpm-client '#:active-context)
+      ;; If started inside a context (i.e., with `clpm exec` or `clpm bundle exec`),
+      ;; activate ASDF integration
+      (uiop:symbol-call :clpm-client '#:activate-asdf-integration)
+      ;; Otherwise, activate the default context and ASDF integration.
+      (uiop:symbol-call :clpm-client '#:activate-context \"default\" :activate-asdf-integration t)))")
 
 (defun default-rc ()
-  #?";;; Use CLPM with default configuration to install systems on demand.
+  #?";;; Use CLPM with default configuration.
+;;;
+;;; Generated by CLPM ${(clpm:clpm-version)}
+
 (require \"asdf\")
 #-clpm-client
-(let ((client-asd-pathname #p\"${(clpm:client-asd-pathname)}\"))
-  (when (probe-file client-asd-pathname)
-    (asdf:load-asd client-asd-pathname)
-    (asdf:load-system \"clpm-client\")
-    (when (uiop:symbol-call :clpm-client :active-context)
-      (uiop:symbol-call :clpm-client :activate-asdf-integration))))")
+(when (asdf:find-system \"clpm-client\" nil)
+  ;; Load the CLPM client if we can find it.
+  (asdf:load-system \"clpm-client\")
+  (when (uiop:symbol-call :clpm-client '#:active-context)
+    ;; If started inside a context (i.e., with `clpm exec` or `clpm bundle exec`),
+    ;; activate ASDF integration
+    (uiop:symbol-call :clpm-client '#:activate-asdf-integration)))")
 
 (define-cli-command (("client" "rc") *client-rc-ui*) (args options)
   (declare (ignore args))
